--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "enpeem-package-publish-test",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "Test desciption",
+  "type": "module",
   "main": "index.js",
   "repository": {
     "url": "git+https://github.com/Robbo23/test-package-publish.git",
